--- a/ESPRainMaker/ESPRainMaker/ESPRainMaker.entitlements
+++ b/ESPRainMaker/ESPRainMaker/ESPRainMaker.entitlements
@@ -14,7 +14,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.espressif.rainmaker.softap</string>
+		<string>group.com.spindance.egorainmakertest</string>
 	</array>
 </dict>
 </plist>
