--- a/ESPRainMaker/ESPRainMaker/Configuration.plist
+++ b/ESPRainMaker/ESPRainMaker/Configuration.plist
@@ -5,15 +5,13 @@
 	<key>AWS Configuration</key>
 	<dict>
 		<key>App Client ID</key>
-		<string>60i6kac5f9rjuetqnq5mnmaqv6</string>
+		<string>{CLIENT_ID}</string>
 		<key>Authentication URL</key>
-		<string>https://auth.rainmaker.espressif.com/oauth2</string>
+		<string>https://test-ego-p3-design-stack.auth.eu-west-1.amazoncognito.com/oauth2</string>
 		<key>Base URL</key>
-		<string>https://api.rainmaker.espressif.com</string>
+		<string>https://tvt9sm00pg.execute-api.eu-west-1.amazonaws.com/dev</string>
 		<key>Redirect URL</key>
-		<string>com.espressif.rainmaker.softap://success</string>
-		<key>Claim URL</key>
-		<string>https://esp-claiming.rainmaker.espressif.com</string>
+		<string>com.spindance.egorainmakertest://success</string>
 	</dict>
 	<key>External Links</key>
 	<dict>
@@ -57,7 +55,7 @@
 		<true/>
 	</dict>
 	<key>App Group</key>
-	<string>group.com.espressif.rainmaker.softap</string>
+	<string>group.com.spindance.egorainmakertest</string>
 	<key>App Theme Color</key>
 	<string>#FFFFFF</string>
 	<key>ESP Alexa Configuration</key>
